# jokeapi-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  jokeapi.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  jokeapi.rockspec  jokeapi_sdk.lua  jokeapi_types.lua
php/: AGENTS.md  CLAUDE.md  (+6 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  jokeapi_sdk.py  jokeapi_types.py  pyproject.toml
py/core/: context.py  control.py  error.py  helpers.py  response.py
py/entity/: info_entity.py  joke_entity.py  submit_entity.py
py/feature/: audit_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  proxy_feature.py  ratelimit_feature.py  rbac_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_exists.py  test_info_direct.py  test_info_entity.py  test_joke_direct.py  test_joke_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_submit_entity.py
py/utility/: done.py  feature_init.py  make_context.py  make_error.py  make_fetch_def.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_body.py  prepare_method.py  prepare_query.py  result_basic.py  transform_request.py
(+444 files in other folders)
